crates/pamoja-ffi/include/pamoja.h

// The result of a fallible pamoja call.
//
// A return of [`PamojaStatus::Ok`] means success; any other value indicates a
// failure whose description is available from [`pamoja_last_error_message`] on
// the same thread.
typedef enum {
  // The call succeeded.
  PamojaStatus_Ok = 0,
  // A transport-level failure while connecting, sending, or receiving.
  PamojaStatus_Transport = 1,
  // A device or peripheral input/output operation failed.
  PamojaStatus_Io = 2,
  // A payload could not be encoded or decoded.
  PamojaStatus_Codec = 3,
  // The operation targeted a resource that is closed or disconnected.
  PamojaStatus_Closed = 4,
  // The requested capability is not compiled into this build.
  PamojaStatus_Unsupported = 5,
  // An argument was null or otherwise invalid, for example non-UTF-8 text.
  PamojaStatus_InvalidArgument = 6,
  // A failure that does not map onto a more specific status.
  PamojaStatus_Other = 7,
  // A Rust panic was caught at the boundary; the call had no effect.
  PamojaStatus_Panic = 8,
  // A security check failed, such as an invalid identity or a bad signature.
  PamojaStatus_Auth = 9,
} PamojaStatus;
// One I2C bus, shared with every driver built on it. Opaque; release it with
// [`pamoja_i2c_bus_free`].
typedef struct PamojaI2cBus PamojaI2cBus;
// A part that is not there, answering from its registers or its commands. Opaque; release it
// with [`pamoja_i2c_part_free`].
typedef struct PamojaI2cPart PamojaI2cPart;
// A PCA9685 driver. Opaque; release it with [`pamoja_pca9685_free`].
typedef struct PamojaPca9685 PamojaPca9685;
// A PCA9685 channel's four register bytes.
//
// The order matches the channel's four consecutive registers, so the whole
// struct can be written in one bus transaction.
typedef struct {
  // The low byte of the count at which the output goes high.
  uint8_t on_low;
  // The high byte of that count; bit 4 is the full-on flag.
  uint8_t on_high;
  // The low byte of the count at which the output goes low.
  uint8_t off_low;
  // The high byte of that count; bit 4 is the full-off flag.
  uint8_t off_high;
} PamojaPwm;
// How a PCA9685's sixteen outputs are wired, the MODE2 register.
typedef struct {
  // 1 for totem-pole outputs, the power-on setting; 0 for open-drain.
  uint8_t totem_pole;
  // 1 to invert the output logic, for a board with no external driver.
  uint8_t inverted;
  // 1 to change the outputs on the acknowledge of each register write rather than on the
  // stop condition.
  uint8_t change_on_ack;
} PamojaPca9685Outputs;
// How a PCA9685 driver programs the part.
typedef struct {
  // The PWM frequency every channel shares, in hertz; the prescaler reaches 24 to 1526 at
  // 25 MHz, and 50 is what a hobby servo wants.
  uint32_t frequency_hz;
  // The clock the prescaler divides, in hertz: the internal 25 MHz unless the board drives
  // EXTCLK.
  uint32_t oscillator_hz;
  // How the outputs are wired.
  PamojaPca9685Outputs outputs;
} PamojaPca9685Settings;
// Returns the settings a PCA9685 driver takes when given none: 200 Hz on the internal
// oscillator with totem-pole outputs, the part's own power-on state.
//
// # Returns
//
// The settings.
PamojaPca9685Settings pamoja_pca9685_settings_default(void);
// Creates a PCA9685 driver on a bus. Nothing is sent until [`pamoja_pca9685_init`] or the
// first channel is loaded.
//
// # Arguments
//
// * `bus` - the bus the part is on; the driver holds its own share.
// * `address` - the address the A5 to A0 pins select, `0x40` with all six low.
// * `settings` - the frequency, the oscillator, and the output wiring; see
//   [`pamoja_pca9685_settings_default`].
// * `out_driver` - receives the driver.
//
// # Returns
//
// [`PamojaStatus::Ok`] with the driver in `out_driver`, or [`PamojaStatus::InvalidArgument`]
// for a null argument.
//
// # Safety
//
// `bus` must be a live handle or null, and `out_driver` a writable pointer or null.
PamojaStatus pamoja_pca9685_new(const PamojaI2cBus *bus,
                                uint8_t address,
                                PamojaPca9685Settings settings,
                                PamojaPca9685 **out_driver);
// Puts the oscillator to sleep, writes the prescale and the output wiring, wakes it, waits
// the 500 us it needs, and restarts the channels.
//
// # Returns
//
// [`PamojaStatus::Ok`], [`PamojaStatus::Io`] when the bus failed, or
// [`PamojaStatus::InvalidArgument`] for a null driver.
//
// # Safety
//
// `driver` must be a live handle or null.
PamojaStatus pamoja_pca9685_init(PamojaPca9685 *driver);
// Loads one channel's on and off counts, initializing the part first if it has not been.
//
// # Arguments
//
// * `driver` - the driver.
// * `channel` - the output, 0 to 15.
// * `pwm` - the four register bytes to load, as the `pamoja_pwm_` functions build them.
//
// # Returns
//
// [`PamojaStatus::Ok`], [`PamojaStatus::InvalidArgument`] for a channel past 15 or a null
// driver, or [`PamojaStatus::Io`] when the bus failed.
//
// # Safety
//
// `driver` must be a live handle or null.
PamojaStatus pamoja_pca9685_set_channel(PamojaPca9685 *driver, uint8_t channel, PamojaPwm pwm);
// Loads every channel with the same counts in one transfer, through the ALL_LED registers.
//
// # Arguments
//
// * `driver` - the driver.
// * `pwm` - the four register bytes to load.
//
// # Returns
//
// As [`pamoja_pca9685_set_channel`].
//
// # Safety
//
// `driver` must be a live handle or null.
PamojaStatus pamoja_pca9685_set_all(PamojaPca9685 *driver, PamojaPwm pwm);
// Stops the oscillator. The channel registers keep their values, and a channel still
// running when the part sleeps sets its RESTART bit.
//
// # Returns
//
// As [`pamoja_pca9685_init`].
//
// # Safety
//
// `driver` must be a live handle or null.
PamojaStatus pamoja_pca9685_sleep(PamojaPca9685 *driver);
// Wakes the oscillator, waits the 500 us it needs, and restarts every channel that was
// running before the sleep.
//
// # Returns
//
// As [`pamoja_pca9685_init`].
//
// # Safety
//
// `driver` must be a live handle or null.
PamojaStatus pamoja_pca9685_wake(PamojaPca9685 *driver);
// Sends the general-call software reset, which returns every PCA9685 on the bus to its
// power-on state, not only this one. It goes to address `0x00`, which nothing on a simulated
// bus answers.
//
// # Returns
//
// As [`pamoja_pca9685_init`].
//
// # Safety
//
// `driver` must be a live handle or null.
PamojaStatus pamoja_pca9685_software_reset(PamojaPca9685 *driver);
// Returns the prescale value the driver writes for its frequency.
//
// # Returns
//
// The PRE_SCALE register value, or 0 for a null driver.
//
// # Safety
//
// `driver` must be a live handle or null.
uint8_t pamoja_pca9685_prescale(const PamojaPca9685 *driver);
// Returns the frequency the part runs at once the prescaler has rounded the one asked for.
//
// # Returns
//
// The frequency in hertz, or 0 for a null driver.
//
// # Safety
//
// `driver` must be a live handle or null.
float pamoja_pca9685_frequency(const PamojaPca9685 *driver);
// Releases a driver and its share of the bus. A null pointer is ignored.
//
// # Safety
//
// `driver` must be a handle from [`pamoja_pca9685_new`] that has not been freed, or null.
void pamoja_pca9685_free(PamojaPca9685 *driver);
// Creates a simulated PCA9685 as it powers up: asleep at 200 Hz with every output off,
// keeping its datasheet's rules for writes, reads, and its register pointer.
//
// # Arguments
//
// * `address` - the address it answers to.
//
// # Returns
//
// A part to put on a simulated bus, released with
// [`pamoja_i2c_part_free`](crate::hal::pamoja_i2c_part_free).
PamojaI2cPart *pamoja_pca9685_sim_part(uint8_t address);